Added MemoryDocument + Initial Frontend + General mods + Tested with 4 clients.
- Added MockDocument and MemoryDocument for in-memory (non-persistent across restarts) document management.
- Added a straight-forward frontend UI.
- Added documents CRUD API.
- Tested the system with 4 clients. Working good.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,8 @@ enableGlobalCache: true
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
+
+packageExtensions:
+  react-scripts@*:
+    peerDependencies:
+      eslint-config-react-app: "*"
