--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,19 @@
   "name": "server",
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "socket.io": "^4.4.1"
+    "sequelize": "^6.19.0",
+    "socket.io": "^4.4.1",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
+    "@types/body-parser": "^1",
     "@types/concurrently": "^7",
+    "@types/cors": "^2",
     "@types/diff-match-patch": "^1",
     "@types/express": "^4",
     "concurrently": "^7.1.0",
