Changed logo & title + configured build and start script.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "scripts": {
     "dev-server": "yarn workspace server dev",
-    "dev-client": "yarn workspace client start"
+    "dev-client": "yarn workspace client start",
+    "build": "yarn workspace server build && yarn workspace client build",
+    "start": "yarn workspace server start"
   }
 }
