--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "dev-server": "yarn workspace server dev",
     "dev-client": "yarn workspace client start",
+    "dev": "concurrently \"yarn workspace server dev\" \"yarn workspace client start\"",
     "build": "yarn workspace server build && yarn workspace client build",
     "start": "yarn workspace server start"
   }
